k8s/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mesa
  labels:
    app.kubernetes.io/name: mesa
    app.kubernetes.io/part-of: mesa-conecta-game
