k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mesa-web
  labels:
    app.kubernetes.io/name: mesa-web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: mesa-web
  ports:
    - name: http
      port: 80
      targetPort: http
